Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.0.0
-
None
-
Linux brucedglados 3.5.0-37-generic #58~precise1-Ubuntu SMP Wed Jul 10 17:48:11 UTC 2013 x86_64 x86_64 x86_64 GNU/Linux
-
2a4cb11d1b67e7ac45030f6cc8ff1c8a24c72e17
Description
QtCreator is incompatible with this line from .gdbinit:
set print max-symbolic-offset 1
When that line is in .gdbinit and you go to the Operate by Instruction window then gdb gives back disassembly lines like this:
>~" 0x00000000004008f2:\tcall 0x400670 <printf@plt>\n"
and they get filtered out. What Qt Creator is apparently expecting is this:
>~" 0x00000000004008f2 <+182>:\tcallq 0x400670 <printf@plt>\n"
which then gets displayed like this:
0x4008f2 <+0x00b6> callq 0x400670 <printf@plt>
We use max-symbolic-offset of 1 because it cleans up the disassembly and makes it more readable. It took some experimentation to realize that this was causing 'call' instructions to be filtered out. We have turned off this setting for now, but it would be nice to have it supported.