Debugger: Fix disassembler parsing if print max-symbolic-offset is 1

Task-number: QTCREATORBUG-11504
Change-Id: Iaf26fbeefda46280e20b6a0943d15c4f2423f674
Reviewed-by: Christian Stenger <christian.stenger@digia.com>
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>