tests/auto/debugger/debugger.pro
@@ -5,4 +5,5 @@ SUBDIRS += gdb.pro
 SUBDIRS += dumpers.pro
 SUBDIRS += namedemangler.pro
 SUBDIRS += simplifytypes.pro
+SUBDIRS += disassembler.pro
 
