tests/auto/debugger/disassembler.pro
@@ -1,0 +1,12 @@
+QTC_LIB_DEPENDS += utils
+QT = core network
+include(../qttest.pri)
+
+DEBUGGERDIR = $$IDE_SOURCE_TREE/src/plugins/debugger
+
+INCLUDEPATH += $$DEBUGGERDIR
+
+SOURCES += \
+    tst_disassembler.cpp \
+    $$DEBUGGERDIR/disassemblerlines.cpp \
+
